# iosDemo

./: README.md
DemoApp/DemoApp/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
DemoApp/DemoApp.xcodeproj/: project.pbxproj
DemoApp/DemoApp.xcodeproj/project.xcworkspace/xcuserdata/sohaahmed.xcuserdatad/: UserInterfaceState.xcuserstate
DemoApp/DemoApp/Base.lproj/: Main.storyboard
DemoFramework/DemoFramework/: DemoFramework.h  add.h  addWrapper.mm  addwrapperheader.h
DemoFramework/DemoFramework.xcodeproj/: project.pbxproj
DemoFramework/DemoFramework.xcodeproj/xcuserdata/sohaahmed.xcuserdatad/xcschemes/: xcschememanagement.plist
c++DemoApp/: CMakeLists.txt  addtest.h  main.cpp
